--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -4,6 +4,6 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    # Runs a single command using the runners shell
+    - uses: actions/checkout@v2
     - name: Run tests
-      run: ls ..
+      run: ./ceedling
