--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -10,4 +10,4 @@ jobs:
 #    - name: Run tests
 #      run: ceedling test:all
     - name: Test
-      run: sudo ./ceedling
+      run: gcc --version
