--- a/project.yml
+++ b/project.yml
@@ -32,7 +32,7 @@
     - test/support
 
 :defines:
-  :common: &common_defines []
+  :common: &common_defines [-std=c11]
   :test:
     - *common_defines
     - TEST
