--- a/project.yml
+++ b/project.yml
@@ -62,9 +62,14 @@
   :system:
     - m
 
+:gcov:
+  :utilities:
+    - gcovr
+  :reports:
+    - HtmlDetailed
+
 :plugins:
   :enabled:
-    - junit_tests_report
-    - stdout_pretty_tests_report
-    - module_generator
     - gcov
+    - junit_tests_report
+    - stdout_ide_tests_report
